--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Helvetica, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -8,6 +9,7 @@
 }
 body {
     height: 100vh;
+    overflow: hidden;
 }
 
 li {
@@ -95,9 +97,9 @@ input {
 }
 
 #tool-user {
-    display: table-cell;
     text-align: center;
     padding: 1em;
+    margin-left: 5em;
 }
 
 #tools ul {
@@ -113,8 +115,94 @@ input {
 }
 
 .tool-selection p {
+    margin: auto;
     background-color: black;
     color: white;
-    width: 100px;
-    height: 30px;
+    width: 90px;
+    padding: 5%;
+
+    border-radius: 60px;
+}
+
+/* main section */
+#main {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+#projects {
+    padding: 10px;
+    height: 100%;
+    display: grid;
+    grid-template:1fr 1fr/1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-row:1/3;
+    gap: 10px;
+    border-right: 5px dashed black;
+}
+.card{
+    background-color: blue;
+    border-radius: 20px;
+    padding: 10px;
+    padding-bottom: 15%;
+}
+
+.card .title {
+    text-align: center;
+    color: WHITE;
+    font-size: larger;
+    font-style: bold;
+}
+
+.card p:nth-child(2) {
+    /* margin: 0 10% 10% 10%; */
+    margin-top: 2%;
+    height: 95%;
+    background-color: white;
+    border-radius: 10px 10px 10px 10px;
+
+    padding: 5%;
+}
+
+#project-title {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+/* Announcement */
+#announcement {
+    text-align: center;
+    background-color: red;
+    margin: 5%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.noti {
+    /* border-bottom: 1px solid gray; */
+    background-color: white;
+    margin: 5%;
+    border-radius: 10px;
+    height:100%;
+    /* height: 33%; */
+}
+
+/* Trending */
+#trending {
+    background-color: yellow;
+    border-radius: 20px;
+    margin: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 5%;
+}
+
+.friend {
+    background-color: white;
+    border-radius: 10px;
+    
 }
